--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>B11-A01-Bangladesh2</title>
     <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
@@ -16,8 +16,8 @@
             Bangladesh 2.0
         </h3>
         <h1 >
-            Idea , innovation ,</h1>
-            <h1>vision and challenges in New Bangladesh.
+            Idea , innovation ,
+            vision and challenges in New Bangladesh.
         </h1>
         <button a:hover class="btn" >Explore New Bangladesh</button>
     </div>
@@ -27,6 +27,55 @@
     
 
 </header>
+
+<section class="box">
+    
+
+    <div class="box-card">
+        <img src="Styles/assets/card-icon.png" alt="">
+        <h3 solid black>Innovation</h3>
+        <p>Innovation is the creation of something new, it implies value and cleverness being added to some process.
+
+    </div>
+
+    <div class="box-card">
+        <img src="Styles/assets/card-icon.png" alt="">
+        <h3>Sustainability</h3>
+        <p>Sustainability is all about meeting the needs of the present without compromising the ability of future generations to meet their own needs.
+
+    </div>
+    <div class="box-card">
+        <img src="Styles/assets/card-icon.png" alt="">
+        <h3>Infrastructure</h3>
+        <p>Infrastructure refers to the fundamental systems and facilities that support a society, economy, or organization. It includes
+
+    </div>
+    <div class="box-card">
+        <img src="Styles/assets/card-icon.png" alt="">
+        <h3>Empowerment</h3>
+        <p>Empowerment is about giving people the tools, confidence, and opportunities to take control of their lives and make meaningful decisions.
+
+    </div>
+
+</section>
+
+<section class="tvf">
+<div class="head">
+    <h1 class="tvfu">The Vision of Future</h1>
+    <p class="para">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+</div>
+</section>
+
+<section class=" dgm-card">
+    <div class="dgm-box">
+        <img src="Styles/assets/card-icon.png" alt="">
+        <h1>Digital Transformation</h1>
+        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+
+    </div>
+
+
+</section>
 
 
 
