dgm box and btn add

--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@
     <div class="box-card">
         <img src="Styles/assets/card-icon.png" alt="">
         <h3 solid black>Innovation</h3>
-        <p>Innovation is the creation of something new, it implies value and cleverness being added to some process.
+        <p class="bcp">Innovation is the creation of something new, it implies value and cleverness being added to some process.
 
     </div>
 
     <div class="box-card">
         <img src="Styles/assets/card-icon.png" alt="">
         <h3>Sustainability</h3>
-        <p>Sustainability is all about meeting the needs of the present without compromising the ability of future generations to meet their own needs.
+        <p class="bcp">Sustainability is all about meeting the needs of the present without compromising the ability of future generations to meet their own needs.
 
     </div>
     <div class="box-card">
         <img src="Styles/assets/card-icon.png" alt="">
         <h3>Infrastructure</h3>
-        <p>Infrastructure refers to the fundamental systems and facilities that support a society, economy, or organization. It includes
+        <p class="bcp">Infrastructure refers to the fundamental systems and facilities that support a society, economy, or organization.
 
     </div>
     <div class="box-card">
         <img src="Styles/assets/card-icon.png" alt="">
         <h3>Empowerment</h3>
-        <p>Empowerment is about giving people the tools, confidence, and opportunities to take control of their lives and make meaningful decisions.
+        <p class="bcp">Empowerment is about giving people the tools, confidence, and opportunities to take control of their lives and make meaningful decisions.
 
     </div>
 
@@ -71,9 +71,25 @@
         <img src="Styles/assets/card-icon.png" alt="">
         <h1>Digital Transformation</h1>
         <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+        <button class="btn-lm">Learn More</button>
+
+    </div>
+    
+    <div class="dgm-box">
+        <img src="Styles/assets/card-icon.png" alt="">
+        <h1>Digital Transformation</h1>
+        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+        <button class="btn-lm">Learn More</button>
 
     </div>
 
+    <div class="dgm-box">
+        <img src="Styles/assets/card-icon.png" alt="">
+        <h1>Digital Transformation</h1>
+        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+        <button class="btn-lm">Learn More</button>
+
+    </div>
 
 </section>
 
