--- a/index.html
+++ b/index.html
@@ -70,28 +70,85 @@
     <div class="dgm-box">
         <img src="Styles/assets/card-icon.png" alt="">
         <h1>Digital Transformation</h1>
-        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+        <p class="para">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
         <button class="btn-lm">Learn More</button>
 
     </div>
     
-    <div class="dgm-box">
+    <div class="dgm-box-1">
         <img src="Styles/assets/card-icon.png" alt="">
-        <h1>Digital Transformation</h1>
-        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
-        <button class="btn-lm">Learn More</button>
+        <h1>Green Energy</h1>
+        <p class="para">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+        <button class="btn-lm-1">Learn More</button>
 
     </div>
 
-    <div class="dgm-box">
+    <div class="dgm-box-2">
         <img src="Styles/assets/card-icon.png" alt="">
-        <h1>Digital Transformation</h1>
-        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
-        <button class="btn-lm">Learn More</button>
+        <h1>Modern Infrastructure</h1>
+        <p class="para">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+        <button class="btn-lm-2">Learn More</button>
 
     </div>
 
 </section>
+
+
+
+<section class="rn">
+
+    <div class="">
+        <h1 class="rnh">Recent News</h1>
+
+        <p class="para">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+    </div>
+    
+</section>
+
+<section class="bls">
+    <div class="st">
+        <img class="imgst" src="Styles/assets/satelite.png" alt="">
+    </div>
+    <div class="blns">
+        <h1>Bangladesh Launches New Satellite</h1>
+        <img  src="Styles/assets/al-jazeera.png" alt="">
+        <p  class="para"> Date: 05/01/2025   Time: 10.25 PM</p>
+
+        <p class="para">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+            with a certain degree of justification, be able to speak of humankind as civilized</p>
+
+        <button class="btn-rm">Read More</button>
+
+
+    </div>
+</section>
+
+
+<section class="bls">
+    <div class="st">
+        <img class="imgst" src="Styles/assets/satelite.png" alt="">
+    </div>
+    <div class="blns">
+        <h1>Bangladesh Launches New Satellite</h1>
+        <img  src="Styles/assets/al-jazeera.png" alt="">
+        <p  class="para"> Date: 05/01/2025   Time: 10.25 PM</p>
+
+        <p class="para">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+            with a certain degree of justification, be able to speak of humankind as civilized</p>
+
+        <button class="btn-rm">Read More</button>
+
+
+    </div>
+</section>
+
+
+
+
+
+
+
+
 
 
 
