--- a/index.html
+++ b/index.html
@@ -142,6 +142,35 @@
     </div>
 </section>
 
+<section class="DT">
+    <h1 class="donet">
+        Donate Today
+    </h1>
+
+    <p class="donet-p">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+
+</section>
+
+<section class="donet-box">
+    <div class="donet-card">
+        <h1>100 Taka</h1>
+    </div>
+
+    <div class="donet-card">
+        <h1>200 Taka</h1>
+    </div>
+    
+    <div class="donet-card">
+        <h1>500 Taka</h1>
+    </div>
+
+    <div class="donet-card">
+        <h1>1000 Taka</h1>
+    </div>
+</section>
+
+
+
 
 
 
