donet taka box and btn add

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <h1>100 Taka</h1>
     </div>
 
-    <div class="donet-card">
+    <div class="donet-card-1">
         <h1>200 Taka</h1>
     </div>
     
@@ -167,7 +167,14 @@
     <div class="donet-card">
         <h1>1000 Taka</h1>
     </div>
+
 </section>
+<section class="tx">
+    <textarea class="txt" id="" cols="50" rows="2" placeholder="Other Amount (Taka)"></textarea>
+    <button class="btn-d">Done Now</button>
+</section>
+
+  
 
 
 
